--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ prompt-toolkit==3.0.39
 psycopg2==2.9.7
 pure-eval==0.2.2
 Pygments==2.16.1
+pytils==0.4.1
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.2
